@@ -78,6 +78,8 @@ Version 1.3.2
        unmounting drives. (Stefan)
 - BUG: The cache could use 100% CPU if a working copy is located on the
        root of a drive. (Stefan)
+- BUG: Pressing ESC closed TortoiseMerge, even if the find dialog was open.
+       Now ESC first closes the find dialog. (Stefan)
 
 Version 1.3.1
 - BUG: Patches with non ANSI or non UTF8 encoding couldn't be applied
